Menu fix + code cleanup
Rewrote the Menu system and cleaned up the code.