@@ -1,36 +1,36 @@
 package me.nikkcom.owlWarps.commands.pwarp.subcommands;
 
 import me.nikkcom.owlWarps.GUI.Menu;
-import me.nikkcom.owlWarps.GUI.menus.PwarpMainMenu;
+import me.nikkcom.owlWarps.GUI.menus.TestMenuTwo;
 import me.nikkcom.owlWarps.commands.SubCommand;
 import org.bukkit.entity.Player;
 
-import java.util.Collections;
 import java.util.List;
 
-public class MenuCommand extends SubCommand {
+public class TestMenuTwoCommand extends SubCommand {
     @Override
     public String getName() {
-        return "menu";
+        return "testmenutwo";
     }
 
     @Override
     public String getDescription() {
-        return "Opens the main Pwarp GUI";
+        return "hua";
     }
 
     @Override
     public String getSyntax() {
-        return "/pwarp menu";
+        return "syntax";
     }
 
     @Override
     public void perform(Player player, String[] args) {
-        Menu menu = new PwarpMainMenu();
+        Menu menu = new TestMenuTwo();
         menu.open(player);
     }
 
+    @Override
     public List<String> onTabComplete(Player player, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
